# exodus

./: .gitignore  README.NEMESIS
exodus/: CMakeLists.txt  Imakefile  Makefile.standalone  README  README.PYTHON  cmake-script  exodus.py.in  exodusii.dsp
exodus/cbind/: CMakeLists.txt
exodus/cbind/include/: exodusII.h  exodusII_cfg.h  exodusII_cfg.h.in
exodus/cbind/src/: Makefile.standalone  ex_get_concat_side_set_node_count.c  ex_get_conn.c  ex_get_partial_conn.c  ex_get_side_set_node_list.c  ex_put_block_params.c
exodus/cbind/test/: CMakeLists.txt  Makefile.standalone  create_mesh.c  test_nemesis.c  testall  testall.in  testall.standalone  testrd1.c  testwt.c
exodus/forbind/: CMakeLists.txt
exodus/forbind/src/: Makefile.standalone  exo_jack.c
exodus/forbind/test/: Makefile.standalone  testall
exodusii/: CMakeLists.txt
exodusii/cbind/: CMakeLists.txt
exodusii/cbind/include/: exodusII.h
exodusii/cbind/src/: exgsnl.c  expmp.c
exodusii/cbind/test/: CMakeLists.txt  Imakefile  testall  testall.in  testwt1.c
exodusii/forbind/include/: Imakefile  exodusII.inc  exodusII_int.inc
exodusii/forbind/src/: Imakefile  addrwrap.F  exgvnm_jack.src  exo_jack.src  expvnm_jack.src
exodusii/forbind/test/: test-nsided.dmp  test.dmp  test1.dmp  test2-1.dmp  test2-2.dmp  testall  testcp_dd.dmp  testcp_ds.dmp  testcp_sd.dmp  testcp_ss.dmp  testcpln.dmp  testcpnl.dmp  testd.dmp  testrd.dmp  testrd_nsid.dmp  testrd_nsid.f  testwt_nsid.f
nemesis/: CMakeLists.txt  Imakefile  Makefile.standalone
nemesis/forbind/: Imakefile  Makefile  Makefile.orig  Makefile.standalone  ne_jack.src
